Migrate code to Java 11 (#467)
* Use local variable type inference where applicable

* Use new collection APIs

* Fix some quality issues