@@ -21,7 +21,6 @@ package org.sonarlint.intellij;
 
 import com.intellij.lang.Language;
 import com.intellij.notification.Notification;
-import com.intellij.notification.NotificationsManager;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.fileEditor.FileEditorManager;
@@ -32,9 +31,9 @@ import com.intellij.psi.PsiFileFactory;
 import com.intellij.serviceContainer.ComponentManagerImpl;
 import com.intellij.testFramework.fixtures.LightPlatformCodeInsightFixture4TestCase;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 import org.junit.After;
 import org.junit.Before;
 import org.sonarlint.intellij.analysis.AnalysisStatus;
@@ -84,13 +83,13 @@ public abstract class AbstractSonarLintLightTests extends LightPlatformCodeInsig
   }
 
   protected void clearNotifications() {
-    NotificationsManager mgr = getNotificationsManager();
-    Arrays.stream(mgr.getNotificationsOfType(Notification.class, getProject()))
+    var mgr = getNotificationsManager();
+    Stream.of(mgr.getNotificationsOfType(Notification.class, getProject()))
       .forEach(mgr::expire);
   }
 
   protected List<Notification> getProjectNotifications() {
-    return Arrays.asList(getNotificationsManager().getNotificationsOfType(Notification.class, getProject()));
+    return List.of(getNotificationsManager().getNotificationsOfType(Notification.class, getProject()));
   }
 
   protected <T> void replaceProjectService(Class<T> clazz, T newInstance) {
@@ -122,13 +121,13 @@ public abstract class AbstractSonarLintLightTests extends LightPlatformCodeInsig
   }
 
   public VirtualFile createAndOpenTestVirtualFile(String fileName, Language language, String text) {
-    VirtualFile file = createTestFile(fileName, language, text);
+    var file = createTestFile(fileName, language, text);
     FileEditorManager.getInstance(getProject()).openFile(file, false);
     return file;
   }
 
   public PsiFile createAndOpenTestPsiFile(String fileName, Language language, String text) {
-    PsiFile file = createTestPsiFile(fileName, language, text);
+    var file = createTestPsiFile(fileName, language, text);
     FileEditorManager.getInstance(getProject()).openFile(file.getVirtualFile(), false);
     return file;
   }
@@ -138,7 +137,7 @@ public abstract class AbstractSonarLintLightTests extends LightPlatformCodeInsig
   }
 
   protected void connectProjectTo(String hostUrl, String connectionName, String projectKey) {
-    ServerConnection connection = ServerConnection.newBuilder().setHostUrl(hostUrl).setName(connectionName).build();
+    var connection = ServerConnection.newBuilder().setHostUrl(hostUrl).setName(connectionName).build();
     getGlobalSettings().addServerConnection(connection);
     getProjectSettings().bindTo(connection, projectKey);
   }
@@ -153,16 +152,16 @@ public abstract class AbstractSonarLintLightTests extends LightPlatformCodeInsig
   }
 
   protected void setProjectLevelExclusions(List<String> exclusions) {
-    SonarLintProjectSettings projectSettings = getProjectSettings();
+    var projectSettings = getProjectSettings();
     projectSettings.setFileExclusions(exclusions);
     ProjectConfigurationListener projectListener = getProject().getMessageBus().syncPublisher(ProjectConfigurationListener.TOPIC);
     projectListener.changed(projectSettings);
   }
 
   protected void setGlobalLevelExclusions(List<String> exclusions) {
-    SonarLintGlobalSettings globalSettings = getGlobalSettings();
+    var globalSettings = getGlobalSettings();
     globalSettings.setFileExclusions(exclusions);
-    GlobalConfigurationListener globalConfigurationListener = ApplicationManager.getApplication()
+    var globalConfigurationListener = ApplicationManager.getApplication()
       .getMessageBus().syncPublisher(GlobalConfigurationListener.TOPIC);
     globalConfigurationListener.applied(globalSettings);
   }
