@@ -21,11 +21,9 @@ package org.sonarlint.intellij.core;
 
 import com.intellij.openapi.progress.EmptyProgressIndicator;
 import com.intellij.openapi.vfs.VirtualFile;
-
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
-
+import java.util.Map;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -67,13 +65,13 @@ public class ServerIssueUpdaterTest extends AbstractSonarLintLightTests {
 
   @Before
   public void prepare() throws InvalidBindingException {
-    ProjectBindingManager bindingManager = spy(SonarLintUtils.getService(getProject(), ProjectBindingManager.class));
+    var bindingManager = spy(SonarLintUtils.getService(getProject(), ProjectBindingManager.class));
     replaceProjectService(IssueManager.class, issueManager);
     replaceProjectService(SonarLintConsole.class, mockedConsole);
     replaceProjectService(ProjectBindingManager.class, bindingManager);
     doReturn(engine).when(bindingManager).getConnectedEngine();
     underTest = new ServerIssueUpdater(getProject());
-    getGlobalSettings().setServerConnections(Collections.singletonList(ServerConnection.newBuilder().setName(SERVER_ID).setHostUrl("http://dummyserver:9000").build()));
+    getGlobalSettings().setServerConnections(List.of(ServerConnection.newBuilder().setName(SERVER_ID).setHostUrl("http://dummyserver:9000").build()));
     getProjectSettings().setConnectionName(SERVER_ID);
     getProjectSettings().setProjectKey(PROJECT_KEY);
 
@@ -86,26 +84,26 @@ public class ServerIssueUpdaterTest extends AbstractSonarLintLightTests {
 
   @Test
   public void should_do_nothing_if_not_connected() {
-    VirtualFile file = myFixture.copyFileToProject(FOO_PHP, FOO_PHP);
+    var file = myFixture.copyFileToProject(FOO_PHP, FOO_PHP);
     getProjectSettings().setBindingEnabled(false);
 
-    underTest.fetchAndMatchServerIssues(Collections.singletonMap(getModule(), Collections.singletonList(file)), new EmptyProgressIndicator(), false);
+    underTest.fetchAndMatchServerIssues(Map.of(getModule(), List.of(file)), new EmptyProgressIndicator(), false);
     verifyZeroInteractions(issueManager);
   }
 
   @Test
   public void testServerIssueTracking() {
-    VirtualFile file = myFixture.copyFileToProject(FOO_PHP, FOO_PHP);
-    ServerIssue serverIssue = mock(ServerIssue.class);
+    var file = myFixture.copyFileToProject(FOO_PHP, FOO_PHP);
+    var serverIssue = mock(ServerIssue.class);
 
     // mock issues downloaded
     when(engine.downloadServerIssues(any(EndpointParams.class), any(), eq(PROJECT_BINDING), eq(FOO_PHP), eq(true), eq(null)))
-      .thenReturn(Collections.singletonList(serverIssue));
+      .thenReturn(List.of(serverIssue));
 
     // run
     getProjectSettings().setBindingEnabled(true);
 
-    underTest.fetchAndMatchServerIssues(Collections.singletonMap(getModule(), Collections.singletonList(file)), new EmptyProgressIndicator(), false);
+    underTest.fetchAndMatchServerIssues(Map.of(getModule(), List.of(file)), new EmptyProgressIndicator(), false);
 
     verify(issueManager, timeout(3000).times(1)).matchWithServerIssues(eq(file), argThat(issues -> issues.size() == 1));
 
@@ -121,16 +119,16 @@ public class ServerIssueUpdaterTest extends AbstractSonarLintLightTests {
       VirtualFile file = myFixture.copyFileToProject(FOO_PHP, "foo" + i + ".php");
       files.add(file);
     }
-    ServerIssue serverIssue = mock(ServerIssue.class);
+    var serverIssue = mock(ServerIssue.class);
 
     // mock issues fetched
-    when(engine.getServerIssues(eq(PROJECT_BINDING), anyString())).thenReturn(Collections.singletonList(serverIssue));
+    when(engine.getServerIssues(eq(PROJECT_BINDING), anyString())).thenReturn(List.of(serverIssue));
 
 
     // run
     getProjectSettings().setBindingEnabled(true);
 
-    underTest.fetchAndMatchServerIssues(Collections.singletonMap(getModule(), files), new EmptyProgressIndicator(), false);
+    underTest.fetchAndMatchServerIssues(Map.of(getModule(), files), new EmptyProgressIndicator(), false);
 
     verify(issueManager, timeout(3000).times(10)).matchWithServerIssues(any(VirtualFile.class), argThat(issues -> issues.size() == 1));
     verify(engine).downloadServerIssues(any(), any(), eq(PROJECT_KEY), eq(true), eq(null));
