@@ -23,11 +23,10 @@ import com.intellij.codeInsight.daemon.DaemonCodeAnalyzer;
 import com.intellij.lang.Language;
 import com.intellij.openapi.fileEditor.FileEditorManager;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.psi.PsiFile;
 import com.intellij.psi.PsiManager;
 import com.intellij.util.messages.MessageBus;
 import com.intellij.util.messages.MessageBusConnection;
-import java.util.Arrays;
+import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
 import org.sonarlint.intellij.AbstractSonarLintLightTests;
@@ -47,14 +46,14 @@ public class CodeAnalyzerRestarterTest extends AbstractSonarLintLightTests {
 
   @Before
   public void prepare() {
-    MessageBusConnection connection = mock(MessageBusConnection.class);
+    var connection = mock(MessageBusConnection.class);
     when(bus.connect(getProject())).thenReturn(connection);
     analyzerRestarter = new CodeAnalyzerRestarter(getProject(), codeAnalyzer);
   }
 
   @Test
   public void should_not_restart_invalid() {
-    VirtualFile vFile1 = mock(VirtualFile.class);
+    var vFile1 = mock(VirtualFile.class);
     when(vFile1.isValid()).thenReturn(false);
 
     when(fileEditorManager.getOpenFiles()).thenReturn(new VirtualFile[] {vFile1});
@@ -66,8 +65,8 @@ public class CodeAnalyzerRestarterTest extends AbstractSonarLintLightTests {
 
   @Test
   public void should_restart_all_open() {
-    PsiFile file1 = createAndOpenTestPsiFile("Foo.java", Language.findLanguageByID("JAVA"), "public class Foo {}");
-    PsiFile file2 = createAndOpenTestPsiFile("Bar.java", Language.findLanguageByID("JAVA"), "public class Bar {}");
+    var file1 = createAndOpenTestPsiFile("Foo.java", Language.findLanguageByID("JAVA"), "public class Foo {}");
+    var file2 = createAndOpenTestPsiFile("Bar.java", Language.findLanguageByID("JAVA"), "public class Bar {}");
 
     analyzerRestarter.refreshOpenFiles();
 
@@ -78,10 +77,10 @@ public class CodeAnalyzerRestarterTest extends AbstractSonarLintLightTests {
 
   @Test
   public void should_restart_files() {
-    PsiFile file1 = createAndOpenTestPsiFile("Foo.java", Language.findLanguageByID("JAVA"), "public class Foo {}");
-    PsiFile file2 = createTestPsiFile("Bar.java", Language.findLanguageByID("JAVA"), "public class Bar {}");
+    var file1 = createAndOpenTestPsiFile("Foo.java", Language.findLanguageByID("JAVA"), "public class Foo {}");
+    var file2 = createTestPsiFile("Bar.java", Language.findLanguageByID("JAVA"), "public class Bar {}");
 
-    analyzerRestarter.refreshFiles(Arrays.asList(file1.getVirtualFile(), file2.getVirtualFile()));
+    analyzerRestarter.refreshFiles(List.of(file1.getVirtualFile(), file2.getVirtualFile()));
 
     verify(codeAnalyzer).restart(file1);
     verifyNoMoreInteractions(codeAnalyzer);
